--- a/src/WorkspaceNaija/Views/Home/Index.cshtml
+++ b/src/WorkspaceNaija/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Welcome to Workspace Naija. This is a fast and Reliable Platform for your search for workspace in Nigeria at your fingertip </a>.</p>
 </div>
